--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
   },
-  "homepage": "https://github.com/hemchand-studyway/studyway-web#readme",
+  "homepage": "https://github.com/admin-studyway/studyway-web#readme",
   "description": "Study Way Website",
   "keywords": [
     "study way",
@@ -57,8 +57,8 @@
     "angular study",
     "angular project"
   ],
-  "bugs":{
-    "url" : "https://github.com/hemchand-studyway/studyway-web/issues",
-    "email" : "hemchand@studyway.in"
+  "bugs": {
+    "url": "https://github.com/admin-studyway/studyway-web/issues",
+    "email": "admin@studyway.in"
   }
 }
